added color quantizer and generic image import
added color quantizer and generic image import

--- a/CCSFileExplorerWV/CCSFileExplorerWV.csproj
+++ b/CCSFileExplorerWV/CCSFileExplorerWV.csproj
@@ -52,6 +52,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SimplePaletteQuantizer">
+      <HintPath>dll\SimplePaletteQuantizer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -81,10 +84,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImageImporter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImageImporter.Designer.cs">
+      <DependentUpon>ImageImporter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImageImporter.resx">
+      <DependentUpon>ImageImporter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
